CP30-72, CP30-71 - Newsletter capture text no longer overlaps social icons, loadmore blob on news is correct width

--- a/gatsby/src/modules/newsletter-capture/main.scss
+++ b/gatsby/src/modules/newsletter-capture/main.scss
@@ -16,7 +16,7 @@
 
   .container {
     @include media-breakpoint-down(md) {
-      max-width: 795px;
+      max-width: calc(100% - (95px * 2));
     }
     @include media-breakpoint-down(sm) {
       max-width: 100%;
